Fix W-channel routing bug and enhance GUI with streamlined interface
Major Updates:
- Fixed critical W-channel routing bug in AXI arbiter (gen_axi_arbiter_mtos.c)
  * Changed from partial MID comparison to full WSID comparison
  * Write data now correctly routes to proper slaves in multi-slave configs

- Added timescale directive to all generated RTL
  * Prevents compilation errors with mixed timescale files

- Created unified testbench generator (gen_axi_with_tb.sh)
  * Single testbench supports multiple test scenarios
  * Runtime test selection via +TEST_MODE parameter
  * Fixed slave timing issues in read channel

- Enhanced GUI with streamlined v3 interface
  * Single-page design with templates, canvas, and CLI
  * Added launch_streamlined.sh as primary launcher
  * Cleaned up test files and redundant scripts

- Updated documentation
  * Clear GUI launch instructions
  * Technical documentation consolidated
  * Bug fixes and known issues documented

Testing:
- All 76 tests pass for 2x2 configuration
- GUI to RTL flow fully verified
- W-channel fix verified in generated code

--- a/gen_amba_axi/Makefile
+++ b/gen_amba_axi/Makefile
@@ -67,7 +67,14 @@ SRC	=\
 	gen_axi_arbiter_mtos.c\
 	gen_axi_arbiter_stom.c\
 	gen_axi_default_slave.c\
-        gen_axi_wid.c
+	gen_axi_wid.c\
+	gen_axi_qos.c\
+	gen_axi_firewall.c\
+	gen_axi_cdc.c\
+	gen_axi_ace_lite.c\
+	gen_axi_region.c\
+	gen_axi_optimized.c\
+	gen_axi_verilog_optimized.c
 		
 OBJS	= $(SRC:.c=.o)
 
